Fix #37 Slideshow- Non Responsive/Shows on Mobile

--- a/less/moodle/bootstrap-variables-from-uikit.less
+++ b/less/moodle/bootstrap-variables-from-uikit.less
@@ -130,7 +130,11 @@
     .uk-panel-box();
 }
 
-Sizes
+.hidden-phone {
+    &:extend(.uk-hidden-small all);
+}
+
+//Sizes
 .well-large {
     padding: 24px;
 }
